--- a/templates/artist/artist_PAGE_NAV.html
+++ b/templates/artist/artist_PAGE_NAV.html
@@ -7,7 +7,7 @@
             {% if home_page %}
                 {{ resource_name|title }}
             {% else %}
-                <a href="/music/{{ resource_name|title|space_to_plus }}" >{{ resource_name|title }}</a>
+                <a href="/music/{{ resource_name|title|space_to_plus }}/" >{{ resource_name|title }}</a>
             {% endif %}
         </h1>
 
