--- a/templates/content/content_CONTAINER.html
+++ b/templates/content/content_CONTAINER.html
@@ -5,7 +5,7 @@
     <div class="container-table">
         <div class="header">
 
-            <div class="left">
+            <div class="section-title left">
                 {{ content_description|title }}
             </div>
 
@@ -43,6 +43,9 @@
                 {% endif %}
             </div> <!--END display page nav -->
 
+        </div>
+
+        <div id="content-slow" class="slow-warning">
         </div>
 
         <!-- content table -->
