--- a/templates/general/general_HTML_HEAD.html
+++ b/templates/general/general_HTML_HEAD.html
@@ -15,5 +15,6 @@
 <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/header.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
+<link href="{{ STATIC_URL }}css/footer.css" rel="stylesheet">
 
 <title>audiosearch</title>
