--- a/templates/search.html
+++ b/templates/search.html
@@ -74,6 +74,9 @@
 
                 </div>
 
+                <div id="search_artists-slow" class="slow-warning">
+                </div>
+
                 <table id="search_artists-table">
                     {% with content=search_artists spinner_id="search_artists-spinner" %}
                         {% include "content_TBODY.html" %}
@@ -98,6 +101,9 @@
                         {% endif %}
                     </div>
 
+                </div>
+
+                <div id="search_songs-slow" class="slow-warning">
                 </div>
 
                 <table id="search_songs-table">
