--- a/templates/song-home.html
+++ b/templates/song-home.html
@@ -47,6 +47,9 @@
                 
             </div>
 
+            <div id="profile-slow" class="slow-warning">
+            </div>
+
             <div id="profile-box">
                 <div id="profile-danceability">
                     danceability : 
