--- a/static/css/content.css
+++ b/static/css/content.css
@@ -9,7 +9,16 @@
     border: 0 none;
     color: #fff;
     font: inherit;
-    margin: 0 0 150px 0;
+    padding: 0 20px 100px 20px;
+    width: 970px;
+    margin: 30px auto;
+
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+    
+    border-color: #272727;
+    border-radius: 0 0 3px 3px;
+    border-style: none solid solid;
+    border-width: thin 2px 2px;
 }
 
 #resource-title {
@@ -21,6 +30,7 @@
     float: left;
     margin-bottom: 5px;
     word-wrap: break-word;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 #resource-title li {
     float: right;
@@ -54,4 +64,16 @@
 
 .subtitle {
     font-size: 20px;
+}
+
+.section-title {
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.content-notification {
+    font-size: 20px;
+    color: #FFCC99;
+    background-color: #3F3F3F;
+    padding: 15px 8px;
+    display: none;
 }
