--- a/templates/artist-content.html
+++ b/templates/artist-content.html
@@ -10,6 +10,9 @@
 
 {% include "general_HEADER.html" %}
 
+<div class="page-wrapper">
+
+
 <!-- content -->
 <div id="container-content">
     
@@ -20,6 +23,10 @@
     {% include "content_CONTAINER.html" %}
 
 </div><!--END content -->
+
+{% include "general_FOOTER.html" %}
+
+</div><!--END page wrapper -->
 
 {% include "general_JS_LINKS.html" %}
 
