--- a/templates/static/static_AJAX_OPTS.html
+++ b/templates/static/static_AJAX_OPTS.html
@@ -5,6 +5,7 @@
         var opts = {
                 'resource_id': "{{ resource_id|safe }}",
                 'resource_name': "{{ resource_name|safe }}",
+                'artist_name': "{{ artist_name }}", 
                 'content_key': "{{ pending }}",
                 'page': "{{ page }}",
                 'item_count': "{{ item_count }}",
