--- a/templates/general/general_HEADER.html
+++ b/templates/general/general_HEADER.html
@@ -14,7 +14,7 @@
             </li>
 
             <li>
-                <a href="/music">music</a>
+                <a href="/music/">music</a>
             </li>
 
             <li>
@@ -22,11 +22,15 @@
             </li>
 
             <li>
-                <a href="/about">about</a>
+                <a href="/about/">about</a>
             </li>
 
             <li>
                 /
+            </li>
+
+            <li class="link-color">
+                search
             </li>
 
             <li>
