--- a/templates/music_home.html
+++ b/templates/music_home.html
@@ -10,6 +10,8 @@
 
 {% include "general_HEADER.html" %}
 
+<div class="page-wrapper">
+
 <!-- content -->
 <div id="container-content">
     
@@ -23,12 +25,20 @@
     </div>
 
     <hr>
+
+    <div class="subtitle center">
+        The top 100 most popular artists according to the Echo Nest.
+    </div>
     
     {% with content=top_artists spinner_id="top_artists-spinner" %}
         {% include "content_CONTAINER.html" %}
     {% endwith %}
     
 </div><!--END content -->
+
+{% include "general_FOOTER.html" %}
+
+</div><!--END page wrapper -->
 
 {% include "general_JS_LINKS.html" %}
 
