--- a/templates/song-home.html
+++ b/templates/song-home.html
@@ -18,9 +18,10 @@
 
 {% include "general_HEADER.html" %}
 
+<div class="page-wrapper">
+
 <!-- content -->
 <div id="container-content">
-    
     {% include "song_PAGE_NAV.html" %}
 
     <hr>
@@ -47,38 +48,93 @@
                 
             </div>
 
-            <div id="profile-slow" class="slow-warning">
+            <div id="profile-notification" class="content-notification hide">
             </div>
 
-            <div id="profile-box">
-                <div id="profile-danceability">
-                    danceability : 
-
-                    {% if profile.danceability %}
-                        {{ profile.danceability }}
-                    {% endif %}
+            {% if profile.empty %}
+                <div class="content-notification">
+                    {{ profile.empty }}
                 </div>
+            {% else %}
+                <div id="profile-box">
+                    <div id="profile-danceability">
+                        danceability : 
 
-                <div id="profile-liveness">
-                    liveness : 
+                        {% if profile.danceability %}
+                            {{ profile.danceability }}
+                        {% endif %}
+                    </div>
 
-                    {% if profile.liveness %}
-                        {{ profile.liveness }}
-                    {% endif %}
+                    <div id="profile-liveness">
+                        liveness : 
+
+                        {% if profile.liveness %}
+                            {{ profile.liveness }}
+                        {% endif %}
+                    </div>
+
+                    <div id="profile-tempo">
+                        tempo : 
+                        
+                        {% if profile.tempo %}
+                            {{ profile.tempo }}
+                        {% endif %}
+                    </div>
                 </div>
-
-                <div id="profile-tempo">
-                    tempo : 
-                    
-                    {% if profile.tempo %}
-                        {{ profile.tempo }}
-                    {% endif %}
-                </div>
-            </div>
+            {% endif %}
+            
         </div>
     </div><!--END profile box -->
 
+
+    <!-- content tables -->
+    <div id="content-tables" class="content center">
+        <div class="container-table">
+            <div class="header">
+
+                <div class="left">
+                    Similar Songs
+                </div>
+
+                <div id="song_playlist-more" class="right">
+                    {% if song_playlist.next %}
+                        <a href = "/music/{{ artist_name|space_to_plus }}/_/{{ resource_name|space_to_plus }}/+similar/" >more</a>
+                    {% endif %}
+                </div>
+
+                <!-- spinner -->
+                {% if not song_playlist %}
+                    <div id="song_playlist-spinner" class="spinner left">
+                        <img src="{{ STATIC_URL }}img/spinner.gif"></img>
+                    </div>
+                {% endif %}
+
+            </div>
+            
+            <div id="song_playlist-notification" class="content-notification hide">
+            </div>
+
+            <!-- content table -->
+            {% if song_playlist.empty %}
+                <div class="content-notification">
+                    {{ song_playlist.empty }}
+                </div>
+            {% else %}
+                <table id="song_playlist-table">
+                {% with content=song_playlist %}
+                    {% include "content_TBODY.html" %}
+                {% endwith %}
+            </table>
+            {% endif %}
+
+        </div>
+    </div><!--END content tables -->
+
 </div><!--END content -->
+
+{% include "general_FOOTER.html" %}
+
+</div><!--END page wrapper -->
 
 {% include "general_JS_LINKS.html" %}
 
