--- a/templates/general/general_HEADER.html
+++ b/templates/general/general_HEADER.html
@@ -43,6 +43,10 @@
                 <li float="right">
                     <a href="" id="clear">clear</a>
                 </li>
+
+                <li float="right">
+                    <a href="" id="trending">trending</a>
+                </li>
             {% endif %}
         </ul>
     </div>
