--- a/templates/static/static_AJAX_DEBUG.html
+++ b/templates/static/static_AJAX_DEBUG.html
@@ -7,4 +7,11 @@
         return false; 
     });
 </script>
+
+<script type="text/javascript">
+    $('a#trending').click( function() { 
+        print_trending(); 
+        return false; 
+    });
+</script>
 {% endif %}
