--- a/templates/general/general_HEADER.html
+++ b/templates/general/general_HEADER.html
@@ -22,6 +22,14 @@
             </li>
 
             <li>
+                <a href="/trending/">trending</a>
+            </li>
+
+            <li>
+                /
+            </li>
+
+            <li>
                 <a href="/about/">about</a>
             </li>
 
@@ -38,18 +46,17 @@
                     <input id="search-bar" type="text" name="q">
                 </form>
             </li>
-
-            {% if debug %}
-                <li float="right">
-                    <a href="" id="clear">clear</a>
-                </li>
-
-                <li float="right">
-                    <a href="" id="trending">trending</a>
-                </li>
-            {% endif %}
         </ul>
     </div>
 </div><!--END header -->
 
+{% if debug %}
+<div id="debug-zone">
+    <ul>
+        <li float="right">
+            <a href="" id="clear">clear</a>
+        </li>
+    </ul>
+</div>
+{% endif %}
 
