--- a/templates/content/content_CONTAINER.html
+++ b/templates/content/content_CONTAINER.html
@@ -6,7 +6,7 @@
         <div class="header">
 
             <div class="section-title left">
-                {{ content_description|title }}
+                {{ content_title|title }}
             </div>
 
             <!-- spinner -->
