--- a/templates/static/static_AJAX_OPTS.html
+++ b/templates/static/static_AJAX_OPTS.html
@@ -8,6 +8,7 @@
                 'artist_name': "{{ artist_name }}", 
                 'content_key': "{{ pending }}",
                 'page': "{{ page }}",
+                'hello': "<>&'/\\", 
                 'item_count': "{{ item_count }}",
                 'data_is_paged': {{ data_is_paged|yesno:"true,false" }},
                 'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
