--- a/templates/music_home.html
+++ b/templates/music_home.html
@@ -19,7 +19,7 @@
     <div id="resource-title" class="center">
         <div id="title-container">
             <h1>
-                {{ resource_name|title }}
+                Top 100
             </h1>
         </div>
     </div>
