create content objects. change redis storage structure.

--- a/templates/music-home.html
+++ b/templates/music-home.html
@@ -30,7 +30,7 @@
         The top 100 most popular artists according to the Echo Nest.
     </div>
     
-    {% with content=top_artists spinner_id="top_artists-spinner" %}
+    {% with content=complete.top_artists spinner_id="top_artists-spinner" %}
         {% include "content_CONTAINER.html" %}
     {% endwith %}
     
