--- a/templates/static/static_AJAX_OPTS.html
+++ b/templates/static/static_AJAX_OPTS.html
@@ -1,9 +1,9 @@
 {% load audiosearch_tags %}
 
-{% for pending in pending_content %}
+{% for resource in pending %}
     <script type="text/javascript">
         var opts = {
-                'resource_id': "{{ resource_id|safe }}",
+                'resource': "{{ resource|safe }}",
                 'resource_name': "{{ resource_name|safe }}",
                 'artist_name': "{{ artist_name }}", 
                 'content_key': "{{ pending }}",
