--- a/templates/static/static_AJAX_DEBUG.html
+++ b/templates/static/static_AJAX_DEBUG.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     $('a#clear').click( function() { 
-        remove_resource("{{ resource_id }}"); 
+        remove_resource("{{ resource }}"); 
         return false; 
     });
 </script>
