--- a/templates/static/static_AJAX_OPTS.html
+++ b/templates/static/static_AJAX_OPTS.html
@@ -2,7 +2,7 @@
 
 {% for resource in pending %}
     <script type="text/javascript">
-        var opts = {
+        var optsOLD = {
                 'resource': "{{ resource|safe }}",
                 'resource_name': "{{ resource_name|safe }}",
                 'artist_name': "{{ artist_name }}", 
@@ -13,6 +13,10 @@
                 'use_generic_key': {{ use_generic_key|yesno:"true,false" }},
                 'attempt': 0
             };
+
+        var opts = {
+            
+        };
 
         setTimeout(dispatch(opts), AJAX_INITIAL_SNOOZE);
     </script>
