begin adding resource proxies. begin refactoring exceptions. improve miss_handler closure.

--- a/templates/general/general_HTML_HEAD.html
+++ b/templates/general/general_HTML_HEAD.html
@@ -17,4 +17,5 @@
 <link href="{{ STATIC_URL }}css/content.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/footer.css" rel="stylesheet">
 
-<title>audiosearch</title>
+<!-- TODO: parameterize this -->
+<!-- <title>audiosearch</title> -->
