--- a/templates/music-home.html
+++ b/templates/music-home.html
@@ -4,6 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     {% include "general_HTML_HEAD.html" %}
+
+    <title>audiosearch - top100</title>
 </head>
 
 <body>
